# api-gateway/internal/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api
 definitions:
   handler.SessionRequestDoc:
     properties:
@@ -66,12 +65,8 @@ definitions:
       user_id:
         type: integer
     type: object
-host: localhost:8080
 info:
   contact: {}
-  description: API Gateway for fitness microservices
-  title: Fitness App API Gateway
-  version: "1.0"
 paths:
   /sessions:
     post:
@@ -104,6 +99,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Create a new session
       tags:
       - Sessions
@@ -135,6 +132,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Get a session by ID
       tags:
       - Sessions
@@ -169,6 +168,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Create a new user
       tags:
       - Users
@@ -200,6 +201,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Get a user by ID
       tags:
       - Users
@@ -234,6 +237,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Create a new workout
       tags:
       - Workouts
@@ -265,7 +270,15 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Get a workout by ID
       tags:
       - Workouts
+securityDefinitions:
+  BearerAuth:
+    description: API Gateway for fitness microservices
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
